FIX The graphic cut off under the top navigation where new drop shadow has been added is too low please can you tidy this up a bit more please

--- a/src/app/shared/layouts/main-layout/main-layout.component.scss
+++ b/src/app/shared/layouts/main-layout/main-layout.component.scss
@@ -11,7 +11,7 @@
         padding-bottom: 8px;
         border-bottom-left-radius: 15px;
         border-bottom-right-radius: 15px;
-        margin-bottom: 18px;
+        margin-bottom: 20px;
         background: $white;
         box-shadow: 0 3px 6px 0 $light-gray1;
 
